Try to fix game actions on iOs

--- a/components/game/banner/utp/style.css
+++ b/components/game/banner/utp/style.css
@@ -15,6 +15,7 @@
 .actions {
     display: flex;
     margin-top: 35px;
+    flex-shrink: 0;
 }
 
 .button1, .button2 {
